--- a/Web_Project/WebApp/Templates/product-list.html
+++ b/Web_Project/WebApp/Templates/product-list.html
@@ -49,6 +49,10 @@
             text-decoration: none;
 
         }
+
+        .products-page {
+            color: #14bf98!important;
+        }
     </style>
 
 
