--- a/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
+++ b/Web_Project/WebApp/Templates/NavigationBar/nav_User_or_Manager.html
@@ -62,7 +62,7 @@
 
                 {% if user.customer.type == "MN" %}
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="{% url 'Page:page_Manager' %}">PURCHASE MANAGEMENT</a>
+                        <a class="nav-link page-scroll purchase-management" href="{% url 'Page:page_Manager' %}">PURCHASE MANAGEMENT</a>
                     </li>
                 {% endif %}
                 <!-- Dropdown Menu -->          
