--- a/Web_Project/WebApp/Templates/Manager_View.html
+++ b/Web_Project/WebApp/Templates/Manager_View.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <!-- Styles -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
+    <!-- ajax-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    {% load static %}
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/fontawesome-all.css' %}" rel="stylesheet">
+    <link href="{% static 'css/swiper.css' %}" rel="stylesheet">
+	<link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet"> 
+	<link href="{% static 'css/styles_base_UI_home.css' %}" rel="stylesheet">
     <style>
         #cart-table {
             font-family: Arial, Helvetica, sans-serif;
@@ -22,10 +35,21 @@
             background-color: #4CAF50;
             color: white;
         }
+
+        .purchase-management {
+            color: #14bf98!important;
+        }
+
+        .management-board {
+            margin-top: 5rem;
+            margin-right: 10rem;
+        }
     </style>
 </head>
 <body>
-    <div class="row">
+    {% include 'NavigationBar/nav_User_or_Manager.html' %}
+
+    <div class="row management-board">
         <div class="panel panel-info">
             <div class="panel-heading" align="center"><b>THÔNG TIN SẢN PHẨM ĐẶT HÀNG CỦA KHÁCH HÀNG</b></div>
             <table class="w3-table-all" id="cart-table">
